Improvements to the executable script